--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ eframe = { version = "0.31", default-features = false, features = [
   "x11",           # To support older Linux distributions (restores one of the default features)
 ] }
 egui_plot = { version = "*" }
+egui_table = { version = "*" }
 catppuccin-egui = { version = "*", default-features = false, features = [
   "egui31",
 ] }
@@ -46,8 +47,3 @@ getrandom = { version = "0.2", features = ["js"] }
 # opt-level = 3 # fast and small wasm
 opt-level = 'z'
 lto = true
-
-
-# Optimize all dependencies even in debug builds:
-[profile.dev.package."*"]
-opt-level = 1
